--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,114 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+
+.App {
+  background-image: url('./assets/night.jpg');
+  background-size: cover;
+  background-position: bottom;
+  transition: .4 ease-out;
+}
+
+.App.light {
+  background-image: url('./assets/light.jpg');
+}
+
+main {
+  min-height: 100vh;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0 , 0.75));
+  padding: 25px;
+}
+
+.searchBox {
+  width: 100%;
+  margin: 0 0 75px;
+}
+
+.searchBox .search-bar{
+  width: 100%;
+  padding: 15px;
+  display: block;
+  outline: none;
+  appearance: none;
+  border: none;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 0 0 16px 16px;
+  margin-top: -25px;
+  box-shadow: 0 5xp rgba(0, 0, 0, 0.2);
+  color: #313131;
+  font-size: 20px;
+  transition: .4 ease-out;
+  text-transform: capitalize;
+}
+
+.searchBox .search-bar:focus {
+  background-color: rgba(255, 255, 255, 0.75);
+}
+
+/* start location block */
+
+.location-box .location {
+  color: #fff;
+  font-size: 32px;
+  font-weight: normal;
+  text-align: center;
+  text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
+}
+
+.location-box .date {
+  color: #fff;
+  font-size: 20px;
+  font-weight: normal;
+  text-align: center;
+  text-shadow: 2px 2px rgba(50, 50, 70, 0.5);
+  font-style: italic;
+}
+
+.weather-box {
+  text-align: center;
+}
+
+.weather-box .temp {
+  position: relative;
+  display: inline-block;
+  margin: 30px auto;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 16px;
+  padding: 15px 25px;
+  color: #fff;
+  font-size: 102px;
+  font-weight: 900;
+  text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
+  box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
+}
+
+.weather-box .weather {
+  color: #fff;
+  font-size: 48px;
+  font-weight: 700;
+  text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
+}
+
+/* end location block */
+
+@media screen and (max-width: 360px) {
+  .weather-box .temp {
+    position: relative;
+    display: inline-block;
+    margin: 30px auto;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 16px;
+    padding: 10px 15px;
+    color: #fff;
+    font-size: 70px;
+    font-weight: 800;
+    text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
+    box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
+  }
 }
